...
                key: "Alerts.FeltDeletion.Button.Cancel.v122",
                tableName: "Alerts",
                value: "Cancel",
                comment: "When tapping the fire icon in private mode, an alert comes up asking to confirm if you want to delete all browsing data and end your private session. This is the cancel action for the alert, cancelling ending your session.")
        }
...
                    key: "Addresses.EditAddress.Alert.RemoveButton.v129",
                    tableName: "EditAddress",
                    value: "Remove",
                    comment: "Title for the remove button in the remove address alert."
                )
...
                    key: "Addresses.EditAddress.EditNavBarButtonLabel.v129",
                    tableName: "EditAddress",
                    value: "Edit",
                    comment: "Button label for editing the address details shown in the form."
                )
...
                value: "Use saved card",
                comment: "When a user is in the process of making a purchase, and has at least one saved card, we show this label inside the keyboard hint. This indicates to the user that there are stored cards available for use on this pending purchase.")
            public static let Done = MZLocalizedString(
                key: "CreditCards.Settings.Done.v114",
                tableName: "Settings",
...
                key: "FirefoxHomepage.FeltPrivacyUI.Title.v122",
                tableName: "FirefoxHomepage",
                value: "Leave no traces on this device",
                comment: "The title for the card that educates users about how private mode works. The card shows up on the homepage when in the new privacy mode.")

...
        key: "ScanQRCode.ConfirmOpenURL.AllowButton.v129",
        tableName: "ScanQRCode",
        value: "Allow",
        comment: "Allow button to open URL from scanned QR Code")
    public static let ScanQRCodeURLPromptDenyButton = MZLocalizedString(
...

            public struct AccessibilityLabels {
                public static let CloseButton = MZLocalizedString(
                    key: "MainMenu.Account.AccessibilityLabels.CloseButton.v132",
                    tableName: "MainMenu",
...
        key: "TodayWidget.QuickActionsGalleryTitle",
        tableName: "Today",
        value: "Quick Actions",
        comment: "Quick Actions title when widget enters edit mode")
    public static let QuickActionsGalleryTitlev2 = MZLocalizedString(
        key: "TodayWidget.QuickActionsGalleryTitleV2",
        tableName: "Today",
        value: "Ecosia Shortcuts",
        comment: "Firefox shortcuts title when widget enters edit mode. Do not translate the word Firefox.")

...
        key: "TodayWidget.TopSitesGalleryTitleV2",
        tableName: "Today",
        value: "Website Shortcuts",
        comment: "Title for top sites widget to add Firefox top sites shotcuts to home screen")
    public static let TopSitesGalleryDescription = MZLocalizedString(
...
        key: "TodayWidget.QuickViewGalleryTitle",
        tableName: "Today",
        value: "Quick View",
        comment: "Title for Quick View widget in Gallery View where user can add it to home screen")
    public static let QuickViewGalleryDescriptionV2 = MZLocalizedString(
...
